[gd_scene load_steps=3 format=3 uid="uid://bph6fhqcrmxvi"]

[ext_resource type="Script" uid="uid://bhda5wip2nto5" path="res://Scripts/Title Screen/title_screen.gd" id="1_nj5ki"]
[ext_resource type="Texture2D" uid="uid://ba4lh6qh6l24i" path="res://Scripts/Title Screen/title_logo.png" id="2_muvs6"]

[node name="TitleScreen" type="Node"]
script = ExtResource("1_nj5ki")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundTexture" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -35.5
offset_right = 20.0
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="LogoContainer" type="MarginContainer" parent="CanvasLayer/Control/MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Logo" type="TextureRect" parent="CanvasLayer/Control/MainContainer/LogoContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
texture = ExtResource("2_muvs6")
expand_mode = 2

[node name="Spacer" type="Control" parent="CanvasLayer/Control/MainContainer/LogoContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="CanvasLayer/Control/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NewGameButton" type="Button" parent="CanvasLayer/Control/MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "New Game"

[node name="LoadGameButton" type="Button" parent="CanvasLayer/Control/MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Load Game"

[node name="SettingsButton" type="Button" parent="CanvasLayer/Control/MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Settings"

[node name="AboutUsButton" type="Button" parent="CanvasLayer/Control/MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "About Us"

[node name="VersionLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -163.0
offset_top = -24.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.1 Alpha"
horizontal_alignment = 2
